--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,4 +1,4 @@
-body {
+.container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #3498db;
     margin: auto;
@@ -6,6 +6,7 @@ body {
     display: flex;
     align-items: center;
     text-align: center;
+    flex-direction: column;
     justify-content: center;
     min-height: 100vh;
 }
@@ -66,6 +67,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin: 5px;
     width: 100%;
     font-size: 16px;
     transition: background-color 0.3s ease-in-out;
@@ -81,8 +83,8 @@ h2 {
     margin-top: 16px;
     margin-bottom: 8px;
 }
-.container{
-    min-height: 100vh;
-    padding: 30px;
-    
+
+.btn-container {
+    display: flex;
+    justify-content: space-between
 }
