--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -1,90 +1,180 @@
-.container {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #3498db;
-    margin: auto;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-form {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 350px;
-    text-align: left;
-    animation: fadeIn 0.5s ease-in-out;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-h1 {
-    color: #2c3e50;
-    font-size: 24px;
-    text-align: center;
-}
-
-label {
-    display: block;
-    margin-top: 16px;
-    margin-bottom: 8px;
-    font-weight: bold;
-    color: #333333;
-}
-
-input, select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    transition: border-color 0.3s ease-in-out;
-}
-
-input:focus, select:focus {
-    border-color: #3498db;
+body {
+  font-family: Roboto, sans-serif;
+  background-color: #242d34;
+  color: #e7e9ea;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
-    background-color: #2ecc71;
-    color: #ffffff;
-    padding: 12px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 5px;
-    width: 100%;
-    font-size: 16px;
-    transition: background-color 0.3s ease-in-out;
+  font-family: inherit;
+  border: 0;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+}
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-button:hover {
-    background-color: #27ae60;
+.container {
+  max-width: 600px;
+  width: 100%;
+  background-color: #000;
+  padding: 24px 20px;
+  border-radius: 16px;
+  margin-inline: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-h2 {
-    color: #2c3e50;
-    font-size: 18px;
-    margin-top: 16px;
-    margin-bottom: 8px;
+.header {
+  color: #d6d9db;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.close-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 20px;
+  padding: 7px 11px;
+  border-radius: 50%;
+}
+.close-button:hover {
+  background-color: #212222;
+}
+.logo {
+  font-size: 30px;
 }
 
-.btn-container {
-    display: flex;
-    justify-content: space-between
+.content {
+  width: 300px;
+  text-align: center;
+  margin-inline: auto;
+}
+.content h1 {
+  margin-block: 28px;
+}
+
+.action-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 36px;
+}
+.primary-button,
+.secondary-button {
+  width: 100%;
+  border-radius: 20px;
+  padding: 8px 0;
+  font-size: 15px;
+  font-weight: 500;
+}
+.primary-button {
+  background-color: #fff;
+  color: #0f1419;
+}
+.primary-button:hover {
+  background-color: #e6e6e6;
+}
+.secondary-button {
+  background-color: transparent;
+  color: #fff;
+  border: 1px solid #536471;
+}
+.secondary-button:hover {
+  background-color: #181919;
+}
+.sign-in-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.sign-in-button object {
+  width: 24px;
+  height: 24px;
+}.email-log-in {
+  width: 100%;
+  position: relative;
+}
+.email-log-in input {
+  width: 100%;
+  border-radius: 6px;
+  background-color: transparent;
+  border: 1px solid #333639;
+  outline: none;
+  padding: 20px 10px;
+  color: white;
+  font-size: 18px;
+  font-family: "Roboto";
+}
+input::placeholder {
+  opacity: 0;
+}
+input + label {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  color: #71767b;
+  font-size: 18px;
+  pointer-events: none;
+  transition: 200ms ease;
+}
+input:focus {
+  outline: 1px solid #1d9bf0;
+}
+input:focus + label {
+  color: #1d9bf0;
+}
+input:not(:placeholder-shown) + label,
+input:focus + label {
+  top: 6px;
+  left: 10px;
+  font-size: 12px;
+}
+
+.sign-up {
+  margin-top: 32px;
+  font-weight: 300;
+  text-align: center;
+}
+.sign-up a {
+  color: #1d9bf0;
+}
+.sign-up a:hover {
+  text-decoration: underline;
+  text-decoration-color: #1d9bf0;
+}
+.Logoimg
+{
+    width: 200px;
+  margin: auto;
+  
+}
+.logo-container{
+  text-align: center;
+}
+
+.google{
+width: 24px;
 }
