--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -6,13 +6,6 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #010101;
-  font-family: "Ubuntu", sans-serif;
-}
-
 a,
 button {
   all: unset;
@@ -20,13 +13,10 @@ button {
 }
 
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 90px;
+  height: 13vh;
   background-color: hsl(0, 0%, 12%);
-  padding: 20px 40px;
+  padding: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -113,5 +103,4 @@ section > h1 {
 }
 .logoimg{
     width: 200px;
-    margin-top: 40px;
 }
