--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,4 +1,83 @@
 .home-container {
-    height: 87vh;
+    min-height: 87vh;
     background-color: hsl(0, 4%, 5%);
+    color: white;
+    padding: 45px;
+}
+
+.buttons-container {
+    display: flex;
+    margin: 35px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+@media screen and (max-width: 768px) {
+    .big-button {
+        width: 85%;
+    }
+}
+
+@media screen and (min-width: 769px) {
+    .big-button {
+        width: 40%;
+    }
+}
+
+.big-button {
+    border-radius: 10px;
+    margin: 15px;
+    padding: 35px;
+    display: flex;
+    align-items: center;
+}
+
+.btn-text {
+    margin: 0px 15px;
+    font-size: 1.6rem;
+    font-weight: 700;
+}
+
+.cyan {
+    border: 2px solid cyan;
+    color: cyan;
+    box-shadow: 0px 0px 5px cyan;
+}
+
+.cyan:hover {
+    background-color: rgba(0, 255, 255, 0.09);
+}
+
+.magenta {
+    border: 2px solid magenta;
+    color: magenta;
+    box-shadow: 0px 0px 5px magenta;
+}
+
+.magenta:hover {
+    background-color: rgba(255, 0, 255, 0.09);
+}
+
+.orange {
+    border: 2px solid orange;
+    color: orange;
+    box-shadow: 0px 0px 5px orange;
+}
+
+.orange:hover {
+    background-color: rgba(255, 165, 0, 0.09);
+}
+
+.lime {
+    border: 2px solid lime;
+    color: lime;
+    box-shadow: 0px 0px 5px lime;
+}
+
+.lime:hover {
+    background-color: RGBA(0, 255, 0, 0.09);
+}
+
+h1 {
+    margin: 30px 75px;
 }
