--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -79,5 +79,54 @@
 }
 
 h1 {
-    margin: 30px 75px;
+    text-align: center;
+    font-size: 2em;
+    margin: 20px;
+    color: white;
+}
+
+.container-insurance {
+    display: flex;
+    margin: 0px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    color: white;
+}
+
+.card {
+    width: 37%;
+    margin: 25px;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.card img {
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
+
+.card h3 {
+    font-size: 1.5em;
+    margin-bottom: 5px;
+}
+
+.card p {
+    line-height: 1.5;
+    margin-bottom: 10px;
+}
+
+.card a {
+    display: block;
+    text-align: center;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.card a:hover {
+    background-color: #0067cc;
 }
