--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -2,7 +2,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #3498db;
     margin: auto;
-    padding: 0;
+    padding: 20px;
     display: flex;
     align-items: center;
     text-align: center;
@@ -15,8 +15,10 @@ form {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
+    width: 400px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 350px;
+    max-width: 400px;
+    margin: auto;
     text-align: left;
     animation: fadeIn 0.5s ease-in-out;
 }
@@ -67,14 +69,17 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin: 5px;
-    width: 100%;
+    margin-top: 16px;
     font-size: 16px;
     transition: background-color 0.3s ease-in-out;
 }
 
 button:hover {
     background-color: #27ae60;
+}
+
+body {
+    background-color: black;
 }
 
 h2 {
@@ -86,5 +91,5 @@ h2 {
 
 .btn-container {
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
 }
