--- a/src/components/Dashboard/index.css
+++ b/src/components/Dashboard/index.css
@@ -11,7 +11,7 @@ body {
     flex-wrap: wrap;
     gap: 40px;
     padding: 20px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .report-card {
@@ -57,10 +57,6 @@ body {
 @media screen and (max-width: 768px) {
     .container {
         padding: 10px;
-    }
-
-    .report-card {
-        max-width: 100%;
     }
 }
 
